Updated CV page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Rob Hayward</title>
     <script src="https://kit.fontawesome.com/65c7099cec.js" crossorigin="anonymous"></script>
   </head>
   <body>
